--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -70,7 +70,8 @@
             <form
               class="form-horizontal mt-3"
               id="loginform"
-              action="/"
+              method="post"
+              action=""
             >
               <div class="row pb-4">
                 <div class="col-12">
@@ -83,10 +84,11 @@
                       ></span>
                     </div>
                     <input
-                      type="text"
+                      type="email"
                       class="form-control form-control-lg"
-                      placeholder="Username"
-                      aria-label="Username"
+                      placeholder="Email"
+                      aria-label="Email"
+                      name="email"
                       aria-describedby="basic-addon1"
                       required=""
                     />
@@ -100,10 +102,11 @@
                       ></span>
                     </div>
                     <input
-                      type="text"
+                      type="password"
                       class="form-control form-control-lg"
                       placeholder="Password"
                       aria-label="Password"
+                      name="password"
                       aria-describedby="basic-addon1"
                       required=""
                     />
