--- a/views/pages/tables.ejs
+++ b/views/pages/tables.ejs
@@ -46,30 +46,20 @@
                   <thead>
                     <tr>
                       <th scope="col">#</th>
-                      <th scope="col">First</th>
-                      <th scope="col">Last</th>
-                      <th scope="col">Handle</th>
+                      <th scope="col">Name</th>
+                      <th scope="col">Email</th>
+                      <th scope="col">Password</th>
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
-                      <th scope="row">1</th>
-                      <td>Mark</td>
-                      <td>Otto</td>
-                      <td>@mdo</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">2</th>
-                      <td>Jacob</td>
-                      <td>Thornton</td>
-                      <td>@fat</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3</th>
-                      <td>Larry</td>
-                      <td>the Bird</td>
-                      <td>@twitter</td>
-                    </tr>
+                    <% user.forEach((users,i)=>{ %>
+                      <tr>
+                        <td><%= i+1 %></td>
+                        <td><%= users.name %></td>
+                        <td><%= users.email %></td>
+                        <td><%= users.password %></td>
+                      </tr>
+                    <% }) %>
                   </tbody>
                 </table>
               </div>
